[FEAT]: Minimal functionality added
